hw6